cmake_minimum_required(VERSION 3.24)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm beakjoon/graph/dfs/bj1260.cpp beakjoon/graph/bfs/bj2178.cpp beakjoon/graph/bfs/bj2606.cpp beakjoon/graph/bfs/bj2667.cpp beakjoon/graph/bfs/bj7576.cpp beakjoon/graph/bfs/bj1697.cpp beakjoon/graph/bfs/bj11724.cpp beakjoon/graph/bfs/bj14502.cpp beakjoon/graph/bfs/bj1753.cpp beakjoon/set/bj7785.cpp beakjoon/backtracking/bj1062.cpp wanted/num1.cpp wanted/num2.cpp wanted/num3.cpp programmers/hash/pokemon.cpp programmers/hash/not_complete_athelete.cpp programmers/hash/phone_book_list.cpp
        programmers/hash/camouflage.cpp beakjoon/math/bj2921.cpp programmers/hash/best_album.cpp beakjoon/graph/bfs/bj2251.cpp programmers/stack_queue/hate_same_num.cpp programmers/stack_queue/function_development.cpp programmers/heap/more_hot.cpp programmers/heap/disk_controller.cpp programmers/heap/dual_priority_queue.cpp programmers/sort/kth_number.cpp programmers/sort/biggest_number.cpp programmers/sort/h_index.cpp programmers/brute_force/mock_test.cpp programmers/brute_force/find_prime_num.cpp programmers/greedy/training_clothes.cpp programmers/kakao2019/crain_doll_game.cpp codetree/level_test/num5.cpp codetree/level_test/num4.cpp codetree/level_test/num6.cpp beakjoon/math/bj17128.cpp beakjoon/dp/bj17175.cpp beakjoon/graph/dijkstra/bj5972.cpp beakjoon/backtracking/bj_test.cpp beakjoon/math/bj13410.cpp beakjoon/math/bj13410.cpp beakjoon/math/bj13410.cpp)

add_executable( beakjoon/graph/bfs/bj1753.cpp beakjoon/math/bj13410.cpp)
add_executable(graph_bj1753 beakjoon/graph/bfs/bj1753.cpp beakjoon/math/bj13410.cpp)
add_executable(set_bj7785 beakjoon/set/bj7785.cpp beakjoon/math/bj13410.cpp)
add_executable(backtracking_bj1062 beakjoon/backtracking/bj1062.cpp beakjoon/math/bj13410.cpp)
add_executable(wanted_num1 wanted/num1.cpp beakjoon/math/bj13410.cpp)
add_executable(wanted_num2 wanted/num2.cpp beakjoon/math/bj13410.cpp)
add_executable(wanted_num3 wanted/num3.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_hash_not_complete_athelete programmers/hash/not_complete_athelete.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_hash_phone_book_list programmers/hash/phone_book_list.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_hash_camouflage programmers/hash/camouflage.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_dp_bj4196 beakjoon/math/bj2921.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_math_bj4196 beakjoon/math/bj2921.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_math_bj2921 beakjoon/math/bj2921.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_hash_best_album programmers/hash/best_album.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj2251 beakjoon/graph/bfs/bj2251.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj1697 beakjoon/graph/bfs/bj1697.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj1753 beakjoon/graph/bfs/bj1753.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj2178 beakjoon/graph/bfs/bj2178.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj2606 beakjoon/graph/bfs/bj2606.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj2667 beakjoon/graph/bfs/bj2667.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj7576 beakjoon/graph/bfs/bj7576.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj11724 beakjoon/graph/bfs/bj11724.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_bfs_bj14502 beakjoon/graph/bfs/bj14502.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_graph_dfs_bj1260 beakjoon/graph/dfs/bj1260.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_stack_queue_hate_same_num programmers/stack_queue/hate_same_num.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_stack_queue_function_development programmers/stack_queue/function_development.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_heap_more_hot programmers/heap/more_hot.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_heap_disk_controller programmers/heap/disk_controller.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_heap_dual_priority_queue programmers/heap/dual_priority_queue.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_sort_biggest_number programmers/sort/biggest_number.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_sort_h_index programmers/sort/h_index.cpp)
add_executable(programmers_brute_force_find_prime_num programmers/brute_force/find_prime_num.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_greedy_training_clothes programmers/greedy/training_clothes.cpp beakjoon/math/bj13410.cpp)
add_executable(programmers_kakao2019_crain_doll_game programmers/kakao2019/crain_doll_game.cpp beakjoon/math/bj13410.cpp)
add_executable(codetree_level_test_num6 codetree/level_test/num6.cpp beakjoon/math/bj13410.cpp)

add_executable(beakjoon_graph_dijkstra_bj5972 beakjoon/graph/dijkstra/bj5972.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_dp_bj17175 beakjoon/dp/bj17175.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_math_bj17128 beakjoon/math/bj17128.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_backgracking_bj_test beakjoon/backtracking/bj_test.cpp beakjoon/math/bj13410.cpp)
add_executable(beakjoon_math_bj13410 beakjoon/math/bj13410.cpp beakjoon/math/bj13410.cpp)