cmake_minimum_required(VERSION 3.25)
project(ray_yhc)

set(CMAKE_CXX_STANDARD 17)

add_executable(ray_yhc main.cpp)

add_executable(BJ_10026 BJ_10026.cpp)
add_executable(BJ_13410 BJ_13410.cpp)
add_executable(BJ_9536 BJ_9536.cpp)
add_executable(BJ_3187 BJ_3187.cpp)
add_executable(BJ_1695 BJ_1695.cpp)
add_executable(BJ_17831 BJ_17831.cpp)