cmake_minimum_required(VERSION 3.25)
project(ray_yhc)

set(CMAKE_CXX_STANDARD 17)

add_executable(ray_yhc main.cpp)

add_executable(BJ_10026 BJ_10026.cpp)
add_executable(BJ_13410 BJ_13410.cpp)
add_executable(BJ_9536 BJ_9536.cpp)
add_executable(BJ_3187 BJ_3187.cpp)
add_executable(BJ_1695 BJ_1695.cpp)
add_executable(BJ_17831 BJ_17831.cpp)
add_executable(BJ_15684 BJ_15684.cpp)
add_executable(BJ_15624 BJ_15624.cpp)
add_executable(BJ_2294 BJ_2294.cpp)
add_executable(BJ_2309 BJ_2309.cpp)
add_executable(BJ_13305 BJ_13305.cpp)
add_executable(BJ_11568 BJ_11568.cpp)
add_executable(BJ_2887 BJ_2887.cpp)
add_executable(BJ_6159 BJ_6159.cpp)
add_executable(BJ_16987 BJ_16987.cpp)
add_executable(BJ_9373 BJ_9373.cpp)