cmake_minimum_required(VERSION 3.25)
project(ray_yhc)

set(CMAKE_CXX_STANDARD 17)

add_executable(ray_yhc main.cpp)

add_executable(BJ_10026 BJ_10026.cpp)
add_executable(BJ_13410 BJ_13410.cpp)
add_executable(BJ_9536 BJ_9536.cpp)
add_executable(BJ_3187 BJ_3187.cpp)
add_executable(BJ_1695 BJ_1695.cpp)
add_executable(BJ_17831 BJ_17831.cpp)
add_executable(BJ_15684 BJ_15684.cpp)
add_executable(BJ_15624 BJ_15624.cpp)
add_executable(BJ_2294 BJ_2294.cpp)
add_executable(BJ_2309 BJ_2309.cpp)
add_executable(BJ_13305 BJ_13305.cpp)
add_executable(BJ_11568 BJ_11568.cpp)
add_executable(BJ_2887 BJ_2887.cpp)
add_executable(BJ_6159 BJ_6159.cpp)
add_executable(BJ_16987 BJ_16987.cpp)
add_executable(BJ_9373 BJ_9373.cpp)
add_executable(BJ_2110 BJ_2110.cpp)
add_executable(softeer_0001 softeer_0001.cpp)
add_executable(BJ_2852 BJ_2852.cpp)
add_executable(BJ_19699 BJ_19699.cpp)
add_executable(BJ_2194 BJ_2194.cpp)
add_executable(BJ_19581 BJ_19581.cpp)
add_executable(BJ_11170 BJ_11170.cpp)
add_executable(BJ_2253 BJ_2253.cpp)
add_executable(BJ_2467 BJ_2467.cpp)
add_executable(BJ_13913 BJ_13913.cpp)
add_executable(softeer_3_2 softeer_3_2.cpp)
add_executable(BJ_12026 BJ_12026.cpp)
add_executable(BJ_11909 BJ_11909.cpp)
add_executable(BJ_1238 BJ_1238.cpp)